--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 
                <div class="column">
-                        <img src="images/image-3.jpeg"><img>
+                        <img src="images/image-3.jpeg">
                         
                     <div class="text4">
                         <p>ACCESSORIES</p>
